--- a/css/main.css
+++ b/css/main.css
@@ -1,34 +1,44 @@
+html {
+  flex: auto;
+  width: 100%;
+  height: 100%;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
 }
 
 :root {
-  --title-color:#333;
-  --body-color:#696969;
-  --background-color:#eee;
-  --foreground-color:#fff;
-  --blend-mode:normal;
+  --title-color: rgb(23, 23, 23);
+  --body-color: #696969;
+  --background-color: #eee;
+  --foreground-color: #fff;
+  --blend-mode: normal;
+  --arrow: #333;
   --img: url("../img/fondo.jpg");
 }
 
 .dark-theme {
-  --title-color:#fff;
-  --body-color:#afafaf;
-  --background-color:#181621;
-  --foreground-color:#211f2a;
-  --blend-mode:normal;
+  --title-color: #fff;
+  --body-color: #afafaf;
+  --background-color: #181621;
+  --foreground-color: #211f2a;
+  --blend-mode: normal;
+  --arrow: rgb(30, 30, 145);
   --img: url("../img/fondo-dark2.jpg");
 }
 
 body {
   background-color: var(--background-color) !important;
   font-size: 1.6rem;
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
   color: var(--body-color) !important;
   transition: color 2s, background-color 2s;
+  width: 100%;
+  height: 100%;
 }
 
 /*boton border carcteristicas */
@@ -72,6 +82,12 @@ body {
   padding-top: 10%;
 }
 
+.container-img h1,
+.container-img p {
+  color: var(--title-color) !important;
+  text-shadow: black !important;
+}
+
 /* padding para la card */
 .card {
   border: none;
@@ -112,72 +128,6 @@ body {
   box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.3);
 }
 
-/* galeria, aca se especificac las columnas, filas y padding -- cada item se le especifica la fila y columna en donde empieza y donde termina */
-.gallery {
-  position: relative;
-  padding-top: 10%;
-  padding-bottom: 10%;
-  padding-left: 10%;
-  padding-right: 10%;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  /* 8 columnas */
-  grid-template-rows: repeat(20, 5vw);
-  /* 8 filas*/
-  grid-gap: 15px;
-  position: absolute;
-}
-
-.gallery__img {
-  filter: brightness(70%);
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
-.gallery__item--1 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 7;
-}
-
-.gallery__item--2 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 1;
-  grid-row-end: 4;
-}
-
-.gallery__item--3 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 4;
-  grid-row-end: 8;
-}
-
-.gallery__item--4 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 7;
-  grid-row-end: 12;
-}
-
-.gallery__item--5 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 8;
-  grid-row-end: 12;
-}
-
-.gallery__item--6 {
-  grid-column-start: 1;
-  grid-column-end: 9;
-  grid-row-start: 12;
-  grid-row-end: 16;
-}
-
 /* swiper libreria */
 .swiper-container {
   width: 100%;
@@ -197,10 +147,16 @@ body {
   object-fit: cover;
 }
 
-.slider p {
-  font-size: 60px;
+.slider a {
+  font-size: 35px;
   color: #fff;
   text-shadow: 0.5rem 0.5rem 1rem black;
+  text-decoration: none;
+}
+
+.slider a:hover {
+  text-decoration: none;
+  color: #fff;
 }
 
 .swiper-slide {
@@ -213,26 +169,211 @@ body {
   align-items: center;
 }
 
-.swiper-slide p {
+.swiper-slide a {
   position: absolute;
+  text-decoration: none;
+}
+
+/* Galerias*/
+.back-btn {
+  width: 5rem;
+  height: 3rem;
+  position: absolute;
+  top: 2.5rem;
+  left: 2.5rem;
+  border: 2px solid var(--body-color);
+  display: flex;
+  cursor: pointer;
+  z-index: 9999;
+  /* boton circle size */
+}
+
+.back-btn i {
+  margin: auto;
+  font-size: 1.7rem;
+}
+
+.back-btn a {
+  text-decoration: none !important;
+  margin: auto;
+  font-size: 1.7rem;
+  color: var(--body-color);
+}
+
+.back-btn a:hover {
+  text-decoration: none;
+}
+
+.gallery-title {
+  margin-top: 10%;
+}
+
+/* galeria, aca se especificac las columnas, filas y padding -- cada item se le especifica la fila y columna en donde empieza y donde termina */
+.gallery {
+  position: relative;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  padding-left: 5%;
+  padding-right: 5%;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  /* 8 columnas */
+  grid-template-rows: repeat(17, 5vw);
+  /* 8 filas*/
+  grid-gap: 20px;
+}
+
+.gallery__img {
+  filter: brightness(100%);
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.gallery-nature .gallery__item--1 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 7;
+}
+
+.gallery-nature .gallery__item--2 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+
+.gallery-nature .gallery__item--3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 5;
+  grid-row-end: 8;
+}
+
+.gallery-nature .gallery__item--4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 7;
+  grid-row-end: 12;
+}
+
+.gallery-nature .gallery__item--5 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 8;
+  grid-row-end: 12;
+}
+
+.gallery-nature .gallery__item--6 {
+  grid-column-start: 1;
+  grid-column-end: 9;
+  grid-row-start: 12;
+  grid-row-end: 17;
+}
+
+.gallery-city .gallery__item--1 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 7;
+}
+
+.gallery-city .gallery__item--2 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+
+.gallery-city .gallery__item--3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 12;
+}
+
+.gallery-city .gallery__item--4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 7;
+  grid-row-end: 12;
+}
+
+.gallery-city .gallery__item--6 {
+  grid-column-start: 1;
+  grid-column-end: 9;
+  grid-row-start: 12;
+  grid-row-end: 17;
+}
+
+.gallery-food .gallery__item--1 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 7;
+}
+
+.gallery-food .gallery__item--2 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+
+.gallery-food .gallery__item--3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 5;
+  grid-row-end: 8;
+}
+
+.gallery-food .gallery__item--4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 7;
+  grid-row-end: 12;
+}
+
+.gallery-food .gallery__item--5 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 8;
+  grid-row-end: 12;
+}
+
+#footer {
+  top: 100rem;
 }
 
 @media (max-width: 640px) {
+  /* Botones  */
   .toggle-btn {
     top: 2.3rem;
     right: 1.3rem;
   }
-  .page-title {
+  .back-btn {
+    width: 2.2rem;
+    height: 1.6rem;
+    top: 1rem;
+    left: 1rem;
+  }
+  .back-btn i {
+    font-size: 0.7rem;
+  }
+  .back-btn a {
+    font-size: 1.7rem;
     position: absolute;
-    top: 2.5rem;
-    left: .8rem;
-    padding: 0%;
+    top: -1rem;
+    left: 0.6rem;
   }
   .container-img {
-    padding-top: 30%;
+    padding-top: 70%;
   }
   .container-categorias {
     padding: 0;
+    margin: 30px;
     font-size: 10px;
   }
   /* card atributes for cellphones */
@@ -253,10 +394,13 @@ body {
     text-align: center;
   }
   .gallery {
-    display: inline-block;
+    padding: 0;
+    margin: 0;
+    margin-right: 18px;
   }
   .gallery img {
-    padding-top: 8%;
+    padding-top: 0%;
+    margin: 0;
   }
   .swiper-container {
     width: 100%;
