--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,6 +58,14 @@ body {
     font-size: 1.7rem;
   }
 }
+.btn-disappear {
+  width: 0rem !important;
+  height: 0rem !important;
+  border: 0px !important;
+  i {
+    font-size: 0rem !important;
+  }
+}
 
 /* bg image  */
 .fixed-bg {
@@ -199,13 +207,15 @@ body {
   a:hover {
     text-decoration: none;
   }
+
+  /* galeria, aca se especificac las columnas, filas y padding -- cada item se le especifica la fila y columna en donde empieza y donde termina */
 }
 .gallery-title {
   margin-top: 10%;
 }
-/* galeria, aca se especificac las columnas, filas y padding -- cada item se le especifica la fila y columna en donde empieza y donde termina */
+
 .gallery {
-  @include gallery(8, 17, 3%, 5%);
+  @include gallery(8, 16, 3%, 5%);
 }
 .gallery__img {
   filter: brightness(100%);
@@ -277,7 +287,7 @@ body {
     grid-row-end: 12;
   }
 
-  .gallery__item--6 {
+  .gallery__item--5 {
     grid-column-start: 1;
     grid-column-end: 9;
     grid-row-start: 12;
@@ -316,28 +326,65 @@ body {
     grid-row-end: 12;
   }
 }
-#footer {
-  top: 100rem;
+
+.modal1 {
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.25s ease-out;
 }
+.modal1.open {
+  opacity: 1;
+  pointer-events: all;
+}
+.full-img {
+  display: flex;
+  position: absolute;
+  height: 90%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.25s ease-out scale(0.9);
+}
+.full-img.open {
+  transform: translate(-50%, -50%) scale(1);
+}
+
 @media (max-width: 640px) {
   /* Botones  */
   .toggle-btn {
     top: 2.3rem;
     right: 1.3rem;
+    top: 2.3rem;
+    right: 1.3rem;
+  }
+  .toggle-btn-gallery {
+    width: 2rem;
+    height: 2rem;
+    top: 0.9rem;
+    right: 1rem;
+    i {
+      font-size: 1rem;
+    }
   }
   .back-btn {
-    width: 2.2rem;
-    height: 1.6rem;
+    width: 2.6rem;
+    height: 1.9rem;
     top: 1rem;
     left: 1rem;
     i {
-      font-size: 0.7rem;
+      font-size: 1rem;
     }
     a {
       font-size: 1.7rem;
       position: absolute;
-      top: -1rem;
-      left: 0.6rem;
+      top: -0.69rem;
+      left: 0.7rem;
     }
   }
   .container-img {
@@ -368,11 +415,51 @@ body {
   .gallery {
     padding: 0;
     margin: 0;
-    margin-right: 18px;
-
+    margin-right: 0px;
+    @include gallery(1, 17, 0%, 0%);
     img {
       padding-top: 0%;
       margin: 0;
+    }
+  }
+  .gallery-nature,
+  .gallery-city,
+  .gallery-food {
+    .gallery__item--1 {
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 1;
+      grid-row-end: 10;
+    }
+    .gallery__item--2 {
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 10;
+      grid-row-end: 20;
+    }
+    .gallery__item--3 {
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 20;
+      grid-row-end: 30;
+    }
+    .gallery__item--4 {
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 30;
+      grid-row-end: 40;
+    }
+    .gallery__item--5 {
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 40;
+      grid-row-end: 50;
+    }
+    .gallery__item--6 {
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 50;
+      grid-row-end: 60;
     }
   }
   .swiper-container {
