--- a/css/main.css
+++ b/css/main.css
@@ -362,26 +362,27 @@ body {
   height: 100%;
   opacity: 0;
   pointer-events: none;
-  transition: 0.25s ease-out;
+  transition: 0.5s ease-out;
 }
 
 .modal1.open {
   opacity: 1;
   pointer-events: all;
+  transition: 0.5s;
 }
 
 .full-img {
-  display: flex;
   position: absolute;
   height: 90%;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  transition: all 0.25s ease-out scale(0.9);
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: all 0.4s ease-out;
 }
 
 .full-img.open {
   transform: translate(-50%, -50%) scale(1);
+  transition: all 0.4s;
 }
 
 @media (max-width: 640px) {
